# FlagTensor

./: .gitignore  LICENSE  README.md  README_cn.md  pyproject.toml  测试报告sample.html
benchmark/: test_CUTENSOR_OP_ABS_perf.py  test_CUTENSOR_OP_ACOSH_perf.py  test_CUTENSOR_OP_ACOS_perf.py  test_CUTENSOR_OP_ADD_perf.py  test_CUTENSOR_OP_ASINH_perf.py  test_CUTENSOR_OP_ASIN_perf.py  test_CUTENSOR_OP_ATANH_perf.py  test_CUTENSOR_OP_ATAN_perf.py  test_CUTENSOR_OP_CEIL_perf.py  test_CUTENSOR_OP_CONJ_perf.py  test_CUTENSOR_OP_COSH_perf.py  test_CUTENSOR_OP_COS_perf.py  test_CUTENSOR_OP_EXP_perf.py  test_CUTENSOR_OP_FLOOR_perf.py  test_CUTENSOR_OP_IDENTITY_perf.py  test_CUTENSOR_OP_LOG_perf.py  test_CUTENSOR_OP_MAX_perf.py  test_CUTENSOR_OP_MIN_perf.py  test_CUTENSOR_OP_MISH_perf.py  test_CUTENSOR_OP_MUL_perf.py  test_CUTENSOR_OP_NEG_perf.py  test_CUTENSOR_OP_RCP_perf.py  test_CUTENSOR_OP_RELU_perf.py  test_CUTENSOR_OP_SIGMOID_perf.py  test_CUTENSOR_OP_SINH_perf.py  test_CUTENSOR_OP_SIN_perf.py  test_CUTENSOR_OP_SOFT_PLUS_perf.py  test_CUTENSOR_OP_SOFT_SIGN_perf.py  test_CUTENSOR_OP_SQRT_perf.py  test_CUTENSOR_OP_SWISH_perf.py  test_CUTENSOR_OP_TANH_perf.py  test_CUTENSOR_OP_TAN_perf.py
ctests/: test_CUTENSOR_OP_ABS.py  test_CUTENSOR_OP_ACOS.py  test_CUTENSOR_OP_ACOSH.py  test_CUTENSOR_OP_ADD.py  test_CUTENSOR_OP_ASIN.py  test_CUTENSOR_OP_ASINH.py  test_CUTENSOR_OP_ATAN.py  test_CUTENSOR_OP_ATANH.py  test_CUTENSOR_OP_CEIL.py  test_CUTENSOR_OP_CONJ.py  test_CUTENSOR_OP_COS.py  test_CUTENSOR_OP_COSH.py  test_CUTENSOR_OP_EXP.py  test_CUTENSOR_OP_FLOOR.py  test_CUTENSOR_OP_LOG.py  (+17 more)
(+99 files in other folders)
